--- a/app/src/main/res/layout/activity_lihat_ayat.xml
+++ b/app/src/main/res/layout/activity_lihat_ayat.xml
@@ -1,9 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ismailr13.pkb.LihatAyat">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".LihatAyat"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp">
+
+        <FrameLayout>
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="10dp"
+                app:srcCompat="@drawable/circle"/>
+
+            <TextView
+                android:id="@+id/txt_number"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginLeft="10dp"
+                android:paddingTop="13dp"
+                android:text="100"
+                android:textAlignment="center"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/txt_title"
+            android:layout_width="280dp"
+            android:layout_height="50dp"
+            android:maxHeight="1000dp"
+            android:layout_marginTop="13dp"
+            android:gravity="center_vertical"
+            android:text="asd"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+    </GridLayout>
+
+    <ListView
+        android:id="@+id/listViewAyat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:divider="@android:color/transparent"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="0dp"></ListView>
+</LinearLayout>
