--- a/app/src/main/res/layout/activity_lihat_pasal.xml
+++ b/app/src/main/res/layout/activity_lihat_pasal.xml
@@ -6,12 +6,11 @@
     android:background="#ecf0f1"
     tools:context=".LihatPasal" >
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/listViewPasal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@+id/button2">
+        android:layout_alignParentEnd="true">
     </ListView>
 </RelativeLayout>
