--- a/app/src/main/res/layout/item_pasal.xml
+++ b/app/src/main/res/layout/item_pasal.xml
@@ -15,7 +15,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
-                app:srcCompat="@drawable/rectangle" />
+                app:srcCompat="@drawable/circle" />
 
             <TextView
                 android:id="@+id/txt_item_number"
