--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#EBAC2A</color>
+    <color name="colorPrimaryDark">#EE772D</color>
+    <color name="colorAccent">#1F8BC1</color>
+    <color name="colorGreen">#549F3B</color>
 </resources>
